# CodeScope

./: .gitignore  Makefile  README.md  aggregator.py  checksums.py  config.py  example.config.json  file_scanner.py  js_parser.py  main.py  pyproject.toml
analysis-tool/: Makefile  README.md  main.py  pyproject.toml
language/c_c++_h/: extract_methods.py  get_all_methods_in_directory_clean.py
language/js/: context-js.py
language/python/: grab_files_names_and_first_100_lines.py
legacy-code/: context-generator.py  context.py  directory_audit.py  file-content-generator.py  grab_files_names.py  grab_first_50_lines.py
